# asctec_sdk3_framework

./: .gitignore  README.md
aci_remote_tutorials/: CMakeLists.txt  package.xml
aci_remote_tutorials/src/: aci_tests_fei.c  aci_tut1_intro.c  aci_tut2_recvar.c  aci_tut3_command.c  aci_tut4_parameter.c
aci_remote_v100/: CMakeLists.txt  package.xml
aci_remote_v100/include/aci_remote_v100/: asctecCommIntf.h  asctecDefines.h
aci_remote_v100/src/aci_remote_v100/: asctecCommIntf.c
asctec_hlp_comm/: CMakeLists.txt  package.xml
asctec_hlp_comm/action/: WaypointGPS.action
asctec_hlp_comm/include/asctec_hlp_comm/: HL_interface.h
asctec_hlp_comm/msg/: mav_hlp_status.msg
asctec_hlp_comm/srv/: GeofenceSrv.srv  HlpCtrlSrv.srv
asctec_hlp_gps/: CMakeLists.txt  package.xml
asctec_hlp_gps/include/asctec_hlp_gps/: gps_conversion.h
asctec_hlp_gps/src/: gps_conversion.cpp  gps_conversion_node.cpp
asctec_hlp_interface/: ActionServer.dia  CMakeLists.txt  package.xml
asctec_hlp_interface/include/asctec_hlp_interface/: AciRemote.h  AsctecSDK3.h  Helper.h  SerialComm.h  WaypointGPSActionServer.h
asctec_hlp_interface/launch/: asctec_hlp_interface.launch
asctec_hlp_interface/src/: AciRemote.cpp  SerialComm.cpp  WaypointGPSActionServer.cpp  hlp_node.cpp
asctec_pelican_description/: CMakeLists.txt  package.xml
asctec_pelican_description/launch/: city_flyer.launch  description.launch  pelican.launch
asctec_pelican_description/urdf/: pelican.xml  pelican_fei.urdf  pelican_fei.urdf.xacro  pelican_with_long_lesgs.xml
asctec_sdk3_firmware/: Asctec JTAG Debug.launch  OpenOCD Asctec-JTAG.launch  asctec_sdk3_firmware AscTec SDK.launch  main.c  main.h  makefile  sdk.c  sdk.h  sdk_telemetry.c  system.c
asctec_sdk3_firmware/.dep/: asctecCommIntfOnboard.o.d  lpc_aci_eeprom.o.d  main.o.d  pelican_ptu.o.d  sdk.o.d  sdk_telemetry.o.d  system.o.d  uart.o.d
asctec_sdk3_firmware/flowcharts/: HLP_firmware.dia
asctec_sdk3_framework/: CMakeLists.txt  package.xml
